# tvm-ffi

./: .pre-commit-config.yaml
.github/workflows/: ci_test.yml
cmake/Utils/: Library.cmake
cpp_rust_test/: CMakeLists.txt  README.md
cpp_rust_test/cpp/: expr_lib.cc
cpp_rust_test/rust/: Cargo.toml  build.rs
cpp_rust_test/rust/src/: main.rs
cpp_rust_test/scripts/: build_and_run.sh
cpp_rust_test1/: CMakeLists.txt  README.md
cpp_rust_test1/cpp/: expr_lib.cc
cpp_rust_test1/rust/: Cargo.toml  build.rs
cpp_rust_test1/rust/src/: main.rs
cpp_rust_test1/scripts/: build_and_run.sh
docs/packaging/: rust_stubgen.md  stubgen.rst
examples/rust_stubgen/: CMakeLists.txt  README.md
examples/rust_stubgen/cpp/: int_pair.cc
examples/rust_stubgen/rust/: Cargo.toml  build.rs
examples/rust_stubgen/rust/examples/: demo.rs
examples/rust_stubgen/rust/src/: lib.rs  main.rs
examples/rust_stubgen/scripts/: run_stubgen.sh
examples/rust_stubgen/src/: int_pair.cc
include/tvm/ffi/reflection/: overload.h  registry.h
python/tvm_ffi/: core.pyi
python/tvm_ffi/cython/: object.pxi  type_info.pxi
python/tvm_ffi/stub/: backend.py  cli.py  codegen.py  consts.py  file_utils.py  generator.py  plan.md  rust_stubgen.md  utils.py
python/tvm_ffi/stub/python/: __init__.py  backend.py  codegen.py
python/tvm_ffi/stub/python_backend/: __init__.py  backend.py  codegen.py  consts.py  imports.py
python/tvm_ffi/stub/python_generator/: codegen.py  generator.py  utils.py
python/tvm_ffi/stub/rust/: __init__.py  backend.py
python/tvm_ffi/stub/rust_backend/: __init__.py  backend.py  codegen.py  consts.py  imports.py
python/tvm_ffi/stub/rust_generator/: codegen.py  consts.py  generator.py  utils.py
rust/: .rustfmt.toml
rust/tvm-ffi/: build.rs
rust/tvm-ffi-macros/src/: object_macros.rs
rust/tvm-ffi-stubgen/src/: ffi.rs  generate.rs  lib.rs  model.rs  schema.rs  utils.rs
rust/tvm-ffi-stubgen/tests/: e2e_auto_init.rs  e2e_cli.rs  e2e_inheritance.rs  e2e_known_issues.rs  e2e_schema.rs  e2e_smoke.rs  e2e_unregistered.rs  stubgen.rs
rust/tvm-ffi-stubgen/tests/common/: mod.rs
rust/tvm-ffi/scripts/: generate_downcast_test_lib.py  generate_optional_test_lib.py
rust/tvm-ffi/src/: any.rs  downcast_test.rs  function_internal.rs  lib.rs  object.rs  optional.rs  string.rs
rust/tvm-ffi/src/collections/: array.rs  map.rs  optional.rs
rust/tvm-ffi/tests/: test_array.rs  test_map.rs  test_object.rs  test_optional.rs
rust_stubgen_e2e_test/: QUICKSTART.md  README.md  TODO.md  run_all.sh
rust_stubgen_e2e_test/test_any_types/: CMakeLists.txt
rust_stubgen_e2e_test/test_any_types/cpp/: any_lib.cc
rust_stubgen_e2e_test/test_any_types/rust/: Cargo.toml  build.rs
rust_stubgen_e2e_test/test_any_types/rust/src/: lib.rs
rust_stubgen_e2e_test/test_any_types/rust/tests/: any_types.rs
rust_stubgen_e2e_test/test_any_types/scripts/: build_and_run.sh
rust_stubgen_e2e_test/test_container_types/: CMakeLists.txt
rust_stubgen_e2e_test/test_container_types/cpp/: container_lib.cc
rust_stubgen_e2e_test/test_container_types/rust/: Cargo.toml  build.rs
rust_stubgen_e2e_test/test_container_types/rust/src/: lib.rs
rust_stubgen_e2e_test/test_container_types/rust/tests/: container_types.rs
rust_stubgen_e2e_test/test_container_types/scripts/: build_and_run.sh
rust_stubgen_e2e_test/test_ffi_types/: CMakeLists.txt
rust_stubgen_e2e_test/test_ffi_types/cpp/: ffi_types_lib.cc
rust_stubgen_e2e_test/test_ffi_types/rust/: Cargo.toml  build.rs
rust_stubgen_e2e_test/test_ffi_types/rust/src/: lib.rs
rust_stubgen_e2e_test/test_ffi_types/rust/tests/: ffi_types.rs
rust_stubgen_e2e_test/test_ffi_types/scripts/: build_and_run.sh
rust_stubgen_e2e_test/test_immutable_types/: CMakeLists.txt
rust_stubgen_e2e_test/test_immutable_types/cpp/: immutable_lib.cc
rust_stubgen_e2e_test/test_immutable_types/rust/: Cargo.toml  build.rs
rust_stubgen_e2e_test/test_immutable_types/rust/src/: lib.rs
rust_stubgen_e2e_test/test_immutable_types/rust/tests/: compile_fail.rs  immutable_types.rs
rust_stubgen_e2e_test/test_immutable_types/rust/tests/ui/: assign_readonly_field.rs  assign_readonly_field.stderr  mut_borrow_readonly.rs  mut_borrow_readonly.stderr
rust_stubgen_e2e_test/test_immutable_types/scripts/: build_and_run.sh
rust_stubgen_e2e_test/test_object_hierarchy/: CMakeLists.txt
rust_stubgen_e2e_test/test_object_hierarchy/cpp/: hierarchy_lib.cc
rust_stubgen_e2e_test/test_object_hierarchy/rust/: Cargo.toml  build.rs
rust_stubgen_e2e_test/test_object_hierarchy/rust/src/: lib.rs
rust_stubgen_e2e_test/test_object_hierarchy/rust/tests/: object_hierarchy.rs
rust_stubgen_e2e_test/test_object_hierarchy/scripts/: build_and_run.sh
rust_stubgen_e2e_test/test_scalar_types/: CMakeLists.txt
rust_stubgen_e2e_test/test_scalar_types/cpp/: scalar_lib.cc
rust_stubgen_e2e_test/test_scalar_types/rust/: Cargo.toml  build.rs
rust_stubgen_e2e_test/test_scalar_types/rust/src/: lib.rs
rust_stubgen_e2e_test/test_scalar_types/rust/tests/: scalar_types.rs
rust_stubgen_e2e_test/test_scalar_types/scripts/: build_and_run.sh
tests/lint/: check_file_type.py
tests/python/: test_stubgen.py
